Fix dashboard not opening windows